Nullobjekt Entwurfsmuster eingebaut + Factory Entwurfsmuster eingebaut + Lösch Button im FrontEnd + Bug Fixing